# agenhood

./: .dockerignore  .gitignore  LICENSE  Makefile  README.md  conftest.py  pyproject.toml
services/connectors/: Dockerfile  README.md  alembic.ini  docker-entrypoint.sh  pyproject.toml
services/connectors/connectors/: app.py  asgi.py  bindings_service.py  config.py  connections_service.py  cp_client.py  crypto.py  db.py  deliveries_service.py  deps.py  errors.py  ids.py  models.py  orchestrator.py  relay.py  rendering.py  resume.py  routing.py  tables.py  webhook_dedupe.py
services/connectors/tests/: conftest.py  test_app_health.py  test_bindings_router.py  test_config.py  test_connections_router.py  test_connections_router_revoke.py  test_connections_service.py  test_cp_client.py  test_cp_client_stream.py  test_crypto.py  test_deliveries_service.py  test_e2e_inbound_outbound.py  test_github_inbound.py  test_github_provider.py  test_github_token.py  test_ids.py  test_migration_smoke.py  test_oauth_router.py  test_orchestrator_tenant_isolation.py  test_provider_base.py  test_provider_meta_gate.py  test_relay.py  test_rendering.py  test_resume.py  test_route_gate.py  test_routing.py  test_routing_rules_delete.py  test_routing_rules_router.py  test_slack_provider.py  test_tables.py  test_webhook_dedupe.py  test_webhooks_router.py
services/control_plane/: Dockerfile  alembic.ini  docker-entrypoint.sh  pyproject.toml
services/control_plane/control_plane/: __init__.py  _oauth_http.py  admission.py  analytics_service.py  anthropic_oauth.py  app.py  asgi.py  audit.py  config.py  config_validation.py  console_exec.py  credentials_service.py  db.py  deploy_keys_service.py  dormant.py  env_vars.py  errors.py  git_remotes_service.py  idle.py  ids.py  ids_compat.py  image_prepull.py  lifecycle.py  limits.py  limits_resolve.py  linked_repos_service.py  logging_setup.py  mcp_service.py  membership_service.py  model_catalog.json  model_catalog.py  models_db.py  oauth_events.py  oauth_service.py  openai_oauth.py  prompts_service.py  reconciler.py  registry.py  resource_limits.py  scheduled_target.py  (+19 more)
services/control_plane/tests/: analytics_seed.py  conftest.py  scripted_db.py  test_admin_staff.py  test_admission.py  test_analytics_router.py  test_analytics_service.py  test_anthropic_oauth.py  test_api_driver_limits.py  test_api_keys_router_unit.py  test_api_keys_staff_list.py  test_asgi.py  test_auth_router_unit.py  test_change_password_session.py  test_config_agent_resources.py  test_config_exa_key.py  test_config_patch_effort.py  test_config_patch_mcp.py  test_config_provisioning.py  test_config_transfer.py  test_config_validation_effort.py  test_config_validation_limits.py  test_console_exec_unit.py  test_console_router_unit.py  test_container_env_routes.py  test_container_routes_lifecycle.py  test_container_routes_resources.py  test_containers_limits_unit.py  test_cp_limits.py  test_create_container_commit_release.py  test_create_container_env.py  test_create_container_resources.py  test_credential_not_leaked.py  test_credential_selection.py  test_credentials_service.py  test_db_pool_sizing.py  test_deploy_keys_routes.py  test_deploy_keys_service.py  test_docker_ctl_update_resources.py  test_docker_ctl_wrappers.py  (+107 more)
services/shim/: pyproject.toml  requirements.in  requirements.txt
services/shim/shim/: __init__.py  app.py  auth.py  eventlog.py  fswatch.py  git_ops.py  main.py  runner.py  transfer.py
services/shim/tests/: test_app.py  test_app_archive.py  test_app_git.py  test_app_live.py  test_app_transfer.py  test_auth.py  test_eventlog.py  test_fswatch.py  test_git_ops.py  test_main_drivers.py  test_main_token.py  test_runner.py  (+5 more)
(+539 files in other folders)
