[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "connectors"
version = "0.1.0"
description = "Standalone GitHub/Slack connectors service for the agent runtime"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "httpx>=0.27",
    "cryptography>=43,<46",
    "pydantic>=2.7,<3",
    "pyjwt[crypto]>=2.8",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.4", "mypy>=1.10", "aiosqlite>=0.20", "testcontainers[postgres]>=4.0", "pytest-cov>=5", "agentcore"]

[tool.uv.sources]
agentcore = { path = "../../packages/agentcore", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["connectors"]
