[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "control_plane"
version = "0.1.0"
description = "FastAPI control plane (Units 2-5)."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "email-validator>=2.1",
    "pydantic-settings>=2.2",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "httpx>=0.27",
    "docker>=7.0",
    "python-ulid>=2.2",
    "argon2-cffi>=23.1,<24",
    "cryptography>=42.0,<46",
    "agentcore",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "testcontainers[postgres]>=4.0",
    "respx>=0.21",
    "pytest-cov>=5",
]

# Resolve the `agentcore` dependency from the local monorepo package rather
# than PyPI (where an unrelated package of the same name lives). Without this,
# `uv sync` installs the wrong `agentcore`, breaking every control-plane import.
[tool.uv.sources]
agentcore = { path = "../../packages/agentcore", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["control_plane"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "unit: fast tests, no docker",
    "integration: needs docker daemon",
]
testpaths = ["tests"]
